# esp32c3mini

./: .gdbinit  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: esp32c3mini.rs  esp32c3mini.rs~  main.rs
