[package]
name = "esp32c3mini"
version = "0.1.0"
authors = ["miro <sladek.miro@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32c3-hal = { version = "0.2.0", features = ["ufmt"] } 
riscv-rt = "0.8"
panic-halt = "0.2"
ws2812-spi = "0.4.0"
smart-leds = "0.3.0"
fugit = "0.3.6"
embedded-hal = { version = "0.2", features = ["unproven"] }
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32c3"] }
